kubernetes/manifests/homelab/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.mateuszledwon.com"
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: v1
kind: Service
metadata:
  name: homelab-gateway
  namespace: envoy-gateway-system
spec:
  selector:
    gateway.envoyproxy.io/owning-gateway-name: homelab-gateway
    gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
  ports:
    - name: http
      port: 80
      targetPort: 10080
      protocol: TCP
